include/Tilengine.h

		typedef unsigned char	uint8_t;	/*!< unsigned 8-bit wide data */
		typedef unsigned int	uint32_t;	/*!< unsigned 32-bit wide data */
typedef unsigned char bool;		/*!< C++ bool type for C language */
#define false	0
#define true	1
/*! overlays for CRT effect */
typedef enum
{
	TLN_OVERLAY_NONE,		/*!< no overlay */
	TLN_OVERLAY_SHADOWMASK,	/*!< Shadow mask pattern */
	TLN_OVERLAY_APERTURE,	/*!< Aperture grille pattern */
	TLN_OVERLAY_SCANLINES,	/*!< Scanlines pattern */
	TLN_OVERLAY_CUSTOM,		/*!< User-provided when calling TLN_CreateWindow() */
	TLN_MAX_OVERLAY
}
TLN_Overlay;
typedef struct Engine*		 TLN_Engine;			/*!< Engine context */
typedef struct Tilemap*		 TLN_Tilemap;			/*!< Opaque tilemap reference */
typedef struct Palette*		 TLN_Palette;			/*!< Opaque palette reference */
typedef struct Bitmap*		 TLN_Bitmap;			/*!< Opaque bitmap reference */
typedef void(*TLN_VideoCallback)(int scanline);
/*! Player index for input assignment functions */
typedef enum
{
	PLAYER1,	/*!< Player 1 */
	PLAYER2,	/*!< Player 2 */
	PLAYER3,	/*!< Player 3 */
	PLAYER4,	/*!< Player 4 */
}
TLN_Player;
/*! Standard inputs query for TLN_GetInput() */
typedef enum
{
	INPUT_NONE,		/*!< no input */
	INPUT_UP,		/*!< up direction */
	INPUT_DOWN,		/*!< down direction */
	INPUT_LEFT,		/*!< left direction */
	INPUT_RIGHT,	/*!< right direction */
	INPUT_BUTTON1,	/*!< 1st action button */
	INPUT_BUTTON2,	/*!< 2nd action button */
	INPUT_BUTTON3,	/*!< 3th action button */
	INPUT_BUTTON4,	/*!< 4th action button */
	INPUT_BUTTON5,	/*!< 5th action button */
	INPUT_BUTTON6,	/*!< 6th action button */
	INPUT_START,	/*!< Start button */

	INPUT_P1 = (PLAYER1 << 4), 	/*!< request player 1 input (default) */
	INPUT_P2 = (PLAYER2 << 4),	/*!< request player 2 input */
	INPUT_P3 = (PLAYER3 << 4),	/*!< request player 3 input */
	INPUT_P4 = (PLAYER4 << 4),	/*!< request player 4 input */
	
	/* compatibility symbols for pre-1.18 input model */ 
	INPUT_A = INPUT_BUTTON1,
	INPUT_B = INPUT_BUTTON2,
	INPUT_C = INPUT_BUTTON3,
	INPUT_D = INPUT_BUTTON4,
	INPUT_E = INPUT_BUTTON5,
	INPUT_F = INPUT_BUTTON6,
	
}
TLN_Input;
/*! CreateWindow flags. Can be none or a combination of the following: */
typedef enum
{
	CWF_FULLSCREEN	=	(1<<0),	/*!< create a fullscreen window */
	CWF_VSYNC		=	(1<<1),	/*!< sync frame updates with vertical retrace */
	CWF_S1			=	(1<<2),	/*!< create a window the same size as the framebuffer */
	CWF_S2			=	(2<<2),	/*!< create a window 2x the size the framebuffer */
	CWF_S3			=	(3<<2),	/*!< create a window 3x the size the framebuffer */
	CWF_S4			=	(4<<2),	/*!< create a window 4x the size the framebuffer */
	CWF_S5			=	(5<<2),	/*!< create a window 5x the size the framebuffer */
	CWF_NEAREST		=   (1<<6),	/*<! unfiltered upscaling */
}
TLN_WindowFlags;
/*! Error codes */
typedef enum
{
	TLN_ERR_OK,				/*!< No error */
	TLN_ERR_OUT_OF_MEMORY,	/*!< Not enough memory */
	TLN_ERR_IDX_LAYER,		/*!< Layer index out of range */
	TLN_ERR_IDX_SPRITE,		/*!< Sprite index out of range */
	TLN_ERR_IDX_ANIMATION,	/*!< Animation index out of range */
	TLN_ERR_IDX_PICTURE,	/*!< Picture or tile index out of range */
	TLN_ERR_REF_TILESET,	/*!< Invalid TLN_Tileset reference */
	TLN_ERR_REF_TILEMAP,	/*!< Invalid TLN_Tilemap reference */
	TLN_ERR_REF_SPRITESET,	/*!< Invalid TLN_Spriteset reference */
	TLN_ERR_REF_PALETTE,	/*!< Invalid TLN_Palette reference */
	TLN_ERR_REF_SEQUENCE,	/*!< Invalid TLN_Sequence reference */
	TLN_ERR_REF_SEQPACK,	/*!< Invalid TLN_SequencePack reference */
	TLN_ERR_REF_BITMAP,		/*!< Invalid TLN_Bitmap reference */
	TLN_ERR_NULL_POINTER,	/*!< Null pointer as argument */ 
	TLN_ERR_FILE_NOT_FOUND,	/*!< Resource file not found */
	TLN_ERR_WRONG_FORMAT,	/*!< Resource file has invalid format */
	TLN_ERR_WRONG_SIZE,		/*!< A width or height parameter is invalid */
	TLN_ERR_UNSUPPORTED,	/*!< Unsupported function */
	TLN_MAX_ERR,
}
TLN_Error;
/** 
 * \anchor group_setup
 * \name Setup
 * Basic setup and management */
/**@{*/
TLNAPI TLN_Engine TLN_Init (int hres, int vres, int numlayers, int numsprites, int numanimations);
TLNAPI void TLN_Deinit (void);
TLNAPI uint32_t TLN_GetNumObjects (void);
TLNAPI uint32_t TLN_GetUsedMemory (void);
TLNAPI uint32_t TLN_GetVersion (void);
TLNAPI void TLN_SetBGColor (uint8_t r, uint8_t g, uint8_t b);
TLNAPI bool TLN_SetBGColorFromTilemap (TLN_Tilemap tilemap);
TLNAPI void TLN_DisableBGColor (void);
TLNAPI bool TLN_SetBGBitmap (TLN_Bitmap bitmap);
TLNAPI bool TLN_SetBGPalette (TLN_Palette palette);
TLNAPI void TLN_SetRasterCallback (TLN_VideoCallback);
TLNAPI void TLN_SetFrameCallback (TLN_VideoCallback);
TLNAPI void TLN_SetRenderTarget (uint8_t* data, int pitch);
TLNAPI void TLN_BeginFrame (int time);
TLNAPI bool TLN_DrawNextScanline (void);
TLNAPI void TLN_SetLoadPath (const char* path);
TLNAPI void TLN_SetCustomBlendFunction (uint8_t (*blend_function)(uint8_t src, uint8_t dst));
TLNAPI TLN_Error TLN_GetLastError (void);
TLNAPI const char *TLN_GetErrorString (TLN_Error error);
/**@}*/

/** 
 * \anchor group_windowing
 * \name Windowing
 * Built-in window and input management */
/**@{*/
TLNAPI bool TLN_CreateWindow (const char* overlay, TLN_WindowFlags flags);
TLNAPI bool TLN_CreateWindowThread (const char* overlay, TLN_WindowFlags flags);
TLNAPI void TLN_SetWindowTitle (const char* title);
TLNAPI bool TLN_ProcessWindow (void);
TLNAPI bool TLN_IsWindowActive (void);
TLNAPI bool TLN_GetInput (TLN_Input id);
TLNAPI void TLN_EnableInput (TLN_Player player, bool enable);
TLNAPI void TLN_AssignInputJoystick (TLN_Player player, int index);
TLNAPI void TLN_DefineInputKey (TLN_Player player, TLN_Input input, uint32_t keycode);
TLNAPI void TLN_DefineInputButton (TLN_Player player, TLN_Input input, uint8_t joybutton);
TLNAPI void TLN_DrawFrame (int time);
TLNAPI void TLN_WaitRedraw (void);
TLNAPI void TLN_DeleteWindow (void);
TLNAPI void TLN_EnableCRTEffect (TLN_Overlay overlay, uint8_t overlay_factor, uint8_t threshold, uint8_t v0, uint8_t v1, uint8_t v2, uint8_t v3, bool blur, uint8_t glow_factor);
TLNAPI void TLN_DisableCRTEffect (void);
TLNAPI void TLN_Delay (uint32_t msecs);
TLNAPI uint32_t TLN_GetTicks (void);
TLNAPI void TLN_BeginWindowFrame (int time);
TLNAPI void TLN_EndWindowFrame (void);
TLNAPI int  TLN_GetAvailableSprite (void);